[gd_scene load_steps=13 format=3 uid="uid://62sdet35rtvt"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_gutpv"]
[ext_resource type="Texture2D" uid="uid://uhhp6i68lr0e" path="res://textures/player_ship/engine_thrust_light.png" id="3_1midt"]
[ext_resource type="Texture2D" uid="uid://dp7h6p1vluj1" path="res://textures/player_ship/engine_thrust.png" id="3_3u18i"]
[ext_resource type="Texture2D" uid="uid://dq50oltr48re6" path="res://textures/player_ship/new_ship.png" id="3_ufyio"]
[ext_resource type="AudioStream" uid="uid://dxsm7ouwum3dk" path="res://sounds/retro-16-bit-fx-shot-3_F_major.wav" id="4_o2bdi"]
[ext_resource type="Texture2D" uid="uid://b0pvon1r3kv17" path="res://textures/player_ship/new_shi_lightp.png" id="5_kmim6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g7r5s"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_o76u0"]
blend_mode = 1

[sub_resource type="Animation" id="Animation_6tydv"]
resource_name = "fly"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("engine_thrust:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3wst3"]
resource_name = "immortality"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfbou"]
_data = {
"fly": SubResource("Animation_6tydv"),
"immortality": SubResource("Animation_3wst3")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qjyhr"]
blend_mode = 1

[node name="player" type="CharacterBody2D"]
process_mode = 1
material = SubResource("ShaderMaterial_g7r5s")
position = Vector2(535, 304)
scale = Vector2(0.25, 0.25)
script = ExtResource("1_gutpv")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
rotation = -1.5708
polygon = PackedVector2Array(72.3077, 6.15411, 58.4614, 33.8464, 27.6921, 61.5386, -0.000244141, 72.3077, -26.1541, 61.5384, -56.9232, 35.3844, -70.7693, 6.15356, -72.3076, -9.23102, -50.769, -63.0771, -23.0767, -72.3078, 23.0772, -72.3076, 52.308, -63.0768, 72.3078, -10.769)

[node name="engine_thrust" type="Sprite2D" parent="."]
position = Vector2(-85.395, 0)
rotation = 1.5708
scale = Vector2(0.11, 0.11)
texture = ExtResource("3_3u18i")

[node name="PointLight2D" type="Sprite2D" parent="engine_thrust"]
material = SubResource("CanvasItemMaterial_o76u0")
position = Vector2(3.11, 40.165)
texture = ExtResource("3_1midt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jfbou")
}

[node name="immortality" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jfbou")
}

[node name="muzzle" type="Marker2D" parent="."]
position = Vector2(49, 1)

[node name="player_ship" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ufyio")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_o2bdi")

[node name="PointLight2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_qjyhr")
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_kmim6")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
rotation = -1.5708
polygon = PackedVector2Array(72.3077, 6.15411, 58.4614, 33.8464, 27.6921, 61.5386, -0.000244141, 72.3077, -26.1541, 61.5384, -56.9232, 35.3844, -70.7693, 6.15356, -72.3076, -9.23102, -50.769, -63.0771, -23.0767, -72.3078, 23.0772, -72.3076, 52.308, -63.0768, 72.3078, -10.769)

[node name="respawn_countdown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="immortality_countdown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="respawn_countdown" to="." method="_on_respawn_countdown_timeout"]
[connection signal="timeout" from="immortality_countdown" to="." method="_on_immortality_countdown_timeout"]
